test/corpus/fail/not-static.mo
=========
not-static.mo
=========

import _ = "lib/not-static"

---

(source_file
  (import
    (wild_pat)
    (text_literal)))
